--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@stardazed/streams-compression": "^1.0.0",
+		"@stardazed/zlib": "^1.0.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
