--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@stardazed/zlib": "^1.0.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"@sveltejs/package": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"compression-streams-polyfill": "^0.1.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
